@@ -10,6 +10,7 @@ Version 6.0.5 - not yet released
   - scale the "Today Screen" buttons on large screens
 * map
   - terrain: permanently disable failed tiles
+  - terrain: fix "unexpected marker segment type" error
 * Android
   - fix bitmap loading on Samsung Galaxy Tab
   - show Bluetooth device names in configuration dialog
